# Vulngrep

./: Cargo.toml  README.md  config.yaml
.github/workflows/: release.yml
src/: config.rs  history.rs  main.rs  repository.rs  terminal.rs  watcher.rs
