[package]
name = "github-notify"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
octocrab = "0.32"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1"
directories = "5.0"
thiserror = "1.0"
open = "3.2"
console = "0.15"
indicatif = "0.17"